First round of modifications to R tutorial

--- a/swc_r_docs/r_tutorial.ipynb
+++ b/swc_r_docs/r_tutorial.ipynb
@@ -1,17 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the best software for analysis of microbiome data comes in the\n",
+    "form of libraries for the R programming language.  \n",
+    "So to prepare for doing microbiome analysis with these libraries, \n",
+    "we will do a brief introduction to R.\n",
+    "\n",
+    "The goal is not to teach you R, but to give you some understanding of \n",
+    "the syntax and structure of R, so you will have insight into what the \n",
+    "commands are doing.\n",
+    "\n",
+    "The best way to learn how to program is to do something useful,\n",
+    "so this introduction to R is built around a common scientific task:\n",
+    "data analysis.\n",
+    "\n",
+    "We are studying inflammation in patients who have been given a new treatment for arthritis,\n",
+    "and need to analyze the first dozen data sets of their daily inflammation.\n",
+    "The data sets are stored in [comma-separated values](http://swcarpentry.github.io/r-novice-inflammation/reference.html#comma-separated-values) (CSV) format:\n",
+    "each row holds information for a single patient,\n",
+    "and the columns represent successive days.\n",
+    "The first few rows of our first file look like this:\n",
+    "\n",
+    "~~~\n",
+    "0,0,1,3,1,2,4,7,8,3,3,3,10,5,7,4,7,7,12,18,6,13,11,11,7,7,4,6,8,8,4,4,5,7,3,4,2,3,0,0\n",
+    "0,1,2,1,2,1,3,2,2,6,10,11,5,9,4,4,7,16,8,6,18,4,12,5,12,7,11,5,11,3,3,5,4,4,5,5,1,1,0,1\n",
+    "0,1,1,3,3,2,6,2,5,9,5,7,4,5,4,15,5,11,9,10,19,14,12,17,7,12,11,7,4,2,10,5,4,2,2,3,2,2,1,1\n",
+    "0,0,2,0,4,2,2,1,6,7,10,7,9,13,8,8,15,10,10,7,17,4,4,7,6,15,6,4,9,11,3,5,6,3,3,4,2,3,2,1\n",
+    "0,1,1,3,3,1,3,5,2,4,4,7,6,5,3,10,8,10,6,17,9,14,9,7,13,9,12,6,7,7,9,6,3,2,2,4,2,0,1,1\n",
+    "~~~\n",
+    "\n",
+    "We want to:\n",
+    "\n",
+    "*   load that data into memory,\n",
+    "*   calculate the average inflammation per day across all patients, and\n",
+    "*   plot the result.\n",
+    "\n",
+    "To do all that, we'll have to learn a little bit about programming.\n",
+    "\n",
+    "\n",
+    "## Getting ready\n",
+    "We need to download some files to follow this lesson:\n",
+    "### Make a working directory for data and output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Rmd_chunk_options": "include = FALSE",
-    "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "source(\"tools/chunk-options.R\")\n",
-    "opts_chunk$set(fig.path = \"fig/01-starting-with-data-\")"
+    "r_workdir=path.expand(\"~/work/analysis/r_tutorial\")\n",
+    "dir.create(r_workdir, showWarnings = TRUE, recursive = TRUE)\n",
+    "setwd(r_workdir)\n",
+    "getwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_url=\"http://swcarpentry.github.io/r-novice-inflammation/r-novice-inflammation-data.zip\"\n",
+    "download.file(data_url,basename(data_url))\n",
+    "unzip(basename(data_url))\n",
+    "list.files('.')"
    ]
   },
   {
@@ -19,7 +86,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "> ## Learning Objectives {.objectives}\n",
+    "> ## Learning Objectives\n",
     "> * Read tabular data from a file into a program.\n",
     "> * Assign values to variables.\n",
     "> * Select individual values and subsections from data.\n",
@@ -39,7 +106,7 @@
    "metadata": {
     "Rmd_chunk_options": "echo = FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -73,21 +140,18 @@
    "metadata": {
     "Rmd_chunk_options": "eval=FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "setwd(\"~/Desktop/r-novice-inflammation/)"
+    "setwd(r_workdir)\n",
+    "getwd()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Just like in the Unix Shell, we type the command and then press `Enter` (or `return`).\n",
-    "Alternatively you can change the working directory using the RStudio GUI using the menu option `Session` -> `Set Working Directory` -> `Choose Directory...`\n",
-    "\n",
     "The data files are located in the directory `data` inside the working directory. Now we can load the data into R using `read.csv`:\n",
     "\n"
    ]
@@ -98,7 +162,7 @@
    "metadata": {
     "Rmd_chunk_options": "results=\"hide\"",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -115,11 +179,11 @@
     "`read.csv` has two [arguments](reference.html#argument): the name of the file we want to read, and whether the first line of the file contains names for the columns of data.\n",
     "The filename needs to be a character string (or [string](reference.html#string) for short), so we put it in quotes. Assigning the second argument, `header`, to be `FALSE` indicates that the data file does not have column headers. We'll talk more about the value `FALSE`, and its converse `TRUE`, in lesson 04.\n",
     "\n",
-    "> ## Tip {.callout}\n",
+    "> ## Tip\n",
     ">\n",
     "> `read.csv` actually has many more arguments that you may find useful when\n",
     "> importing your own data in the future. You can learn more about these\n",
-    "> options in this supplementary [lesson](01-supp-read-write-csv.html).\n",
+    "> options in this supplementary [lesson](http://swcarpentry.github.io/r-novice-inflammation/01-supp-read-write-csv.html).\n",
     "\n",
     "The utility of a function is that it will perform its given action on whatever value is passed to the named argument(s).\n",
     "For example, in this case if we provided the name of a different file to the argument `file`, `read.csv` would read it instead.\n",
@@ -161,7 +225,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -182,7 +246,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -195,7 +259,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "> ## Tip {.callout}\n",
+    "> ## Tip\n",
     ">\n",
     "> We can add comments to our code using the `#` character. It is useful to\n",
     "> document our code in this way so that others (and us the next time we\n",
@@ -210,7 +274,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -239,7 +303,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -266,7 +330,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -287,7 +351,7 @@
     "Since `weight_lb` doesn't \"remember\" where its value came from, it isn't automatically updated when `weight_kg` changes.\n",
     "This is different from the way spreadsheets work.\n",
     "\n",
-    "> ## Tip {.callout}\n",
+    "> ## Tip\n",
     ">An alternative way to print the value of a variable is to use () around the assignment statement. As an example: `(total_weight <- weight_kg + weight_lb)`, adds the values of `weight_kg` and `weight_lb`, assigns the result to the `total_weight`, and finally prints the assigned value of the variable `total_weight`.\n",
     "\n",
     "\n",
@@ -300,7 +364,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -323,7 +387,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -358,7 +422,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -382,7 +446,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -405,7 +469,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -430,7 +494,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -453,7 +517,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -473,7 +537,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -496,7 +560,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -522,7 +586,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -547,7 +611,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -569,7 +633,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -595,7 +659,7 @@
     "\n",
     "To support this, we can use the `apply` function.\n",
     "\n",
-    "> ## Tip {.callout}\n",
+    "> ## Tip\n",
     ">\n",
     "> To learn about a function in R, e.g. `apply`, we can read its help\n",
     "> documention by running `help(apply)` or `?apply`.\n",
@@ -611,7 +675,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -704,7 +768,7 @@
    "metadata": {
     "Rmd_chunk_options": "plot-avg-inflammation",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -729,7 +793,7 @@
    "metadata": {
     "Rmd_chunk_options": "plot-max-inflammation",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -743,7 +807,7 @@
    "metadata": {
     "Rmd_chunk_options": "plot-min-inflammation",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -758,11 +822,11 @@
     "\n",
     "The maximum value rises and falls perfectly smoothly, while the minimum seems to be a step function. Neither result seems particularly likely, so either there's a mistake in our calculations or something is wrong with our data.\n",
     "\n",
-    "> ## Challenge - Plotting data {.challenge}\n",
+    "> ## Challenge - Plotting data\n",
     ">\n",
     "> Create a plot showing the standard deviation of the inflammation data for each day across all patients.\n",
     "\n",
-    "> ## Key Points {.callout}\n",
+    "> ## Key Points\n",
     ">\n",
     "> * Use `variable <- value` to assign a value to a variable in order to record it in memory.\n",
     "> * Objects are created on demand whenever a value is assigned to them.\n",
@@ -774,14 +838,7 @@
     "> * Use `#` to add comments to programs.\n",
     "> * Use `mean`, `max`, `min` and `sd` to calculate simple statistics.\n",
     "> * Use `apply` to calculate statistics across the rows or columns of a data frame.\n",
-    "> * Use `plot` to create simple visualizations.\n",
-    "\n",
-    "> ## Next Steps {.callout}\n",
-    ">\n",
-    "> Our work so far has convinced us that something's wrong with our first data file.\n",
-    "> We would like to check the other 11 the same way, but typing in the same commands repeatedly is tedious and error-prone.\n",
-    "> Since computers don't get bored (that we know of), we should create a way to do a complete analysis with a single command, and then figure out how to repeat that step once for each file.\n",
-    "> These operations are the subjects of the next two lessons.\n"
+    "> * Use `plot` to create simple visualizations."
    ]
   },
   {
