download_through_jupyter.ipynb: Updated to tar notebooks in subdirectories, excluding checkpoint subdirs

--- a/workshop_nb/download_through_jupyter.ipynb
+++ b/workshop_nb/download_through_jupyter.ipynb
@@ -23,7 +23,9 @@
    },
    "outputs": [],
    "source": [
-    "!tar -zcvf my_notebooks.tgz *.ipynb"
+    "%%bash\n",
+    "cd ~/work\n",
+    "find . -name \"*.ipynb\" | grep -v \".ipynb_checkpoints\" | tar -zvcf workshop_notebooks.tgz -T -"
    ]
   },
   {
@@ -43,7 +45,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import FileLink, FileLinks\n",
-    "FileLink('my_notebooks.tgz')"
+    "FileLink('workshop_notebooks.tgz')"
    ]
   },
   {
