--- a/workshop_nb/jupyter_tutorial.ipynb
+++ b/workshop_nb/jupyter_tutorial.ipynb
@@ -259,6 +259,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Different Kernels\n",
+    "Look in the top right corner of this window where it says **Python 3**.  This tells you that the current notebook runs the Python programming language (version 3). Jupyter itself is programming language agnostic, it requires a language module, called a kernel, to know how to handle code from a specific language.  \n",
+    "\n",
+    "To demonstrate this, try to run the following code, which is a version of the above loop that prints 1 to 50, but written in R instead of Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# R version\n",
+    "for (i in 1:50){\n",
+    "  print(i)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It isn't python, so the Python 3 kernel doesn't know what to do with it.  There are [Jupyter kernels for a lot of different languages](https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages). For today's workshop I have only installed a few:\n",
+    "- Python 3\n",
+    "- Python 2\n",
+    "- R\n",
+    "- Bash\n",
+    "\n",
+    "When you make a new notebook, you choose which kernel it is assigned to, but you can change the kernel by selecting **Change Kernel** from the **Kernel** menu above. Try changing this notebook's kernel to **R**, then running the R version of the loop again. You will notice that the **Python 3** in the top right will change to **R** (as will the logo).  Remember that when you change to the R kernel, the python cells in this notebook will no longer work, so you might want to change back to **Python 3** when you are done!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notebook Management\n",
+    "### Saving Work\n",
+    "You can save changes to your notebook, as with most other computer programs: under the *notebook's* **File** menu (not to be confused with your webroswer's File menu) select **Save and Checkpoint**.\n",
+    "\n",
+    "> ### Tip\n",
+    "> The standard keyboard shortcut will generally work, so try command-S on OS X and control-S on Windows.  If it works **(unsaved changes)** at the top of the notebook should change to **(autosaved)**\n",
+    "\n",
+    "Keep in mind that the notebook is saved on your virtual machine, not your local computer.  The [Download from VM](download_through_jupyter.ipynb) notebook has instructions and code cells for downloading notebooks from the VM to your local computer\n",
+    "\n",
+    "### Exploring Notebooks\n",
+    "Take a couple minutes to explore the notebook menus!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* * *\n",
     "This derived from https://raw.githubusercontent.com/ipython/ipython/3.x/examples/Notebook/Running%20Code.ipynb"
    ]
