--- a/workshop_nb/update_notebooks.ipynb
+++ b/workshop_nb/update_notebooks.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Updating Notebooks\n",
+    "Running the following cell will download the latest version of the notebooks for this workshop.\n",
+    "\n",
+    "> ### Warning\n",
+    "> If you have made changes to the notebooks, this command could overwrite those changes, although it will warn you first!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
