workshop_overview.ipynb: Updates and added planned sections

--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -5,9 +5,13 @@
    "metadata": {},
    "source": [
     "## Workshop Sections\n",
-    "1. [Introduction to Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
-    "1. [Introduction to R](swc_r_docs/r_tutorial.ipynb)\n",
-    "1. [Introduction to Dada](dada_docs/dada_tutorial.ipynb)"
+    "1. [Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
+    "1. [R](swc_r_docs/r_tutorial.ipynb)\n",
+    "1. [Dada](dada_docs/dada_tutorial.ipynb)\n",
+    "1. Bash/Unix\n",
+    "1. Qiime\n",
+    "1. Phyloseq\n",
+    "1. Reproducible Research"
    ]
   },
   {
@@ -16,7 +20,8 @@
    "source": [
     "## Miscellaneous\n",
     "* [Download from VM](workshop_nb/download_through_jupyter.ipynb)\n",
-    "* [Update Notebooks](workshop_nb/update_notebooks.ipynb)"
+    "* [Update Notebooks](workshop_nb/update_notebooks.ipynb)\n",
+    "* Virtual Machines and Docker"
    ]
   }
  ],
