Added "resources" links to README.org

--- a/README.org
+++ b/README.org
@@ -1,5 +1,34 @@
-* Getting Started
+* Getting Ready for the Workshop
   1. [[workshop_nb/do_before.org][Install software and redeem your voucher]]
   2. [[workshop_nb/vm_setup.org][VM Setup Instructions]]
   3. [[workshop_nb/start_jupyter.org][Start Jupyter]]
   4. [[workshop_nb/vm_pause.org][Pause Your VM]]
+* Resources
+** This Workshop
+   - [[https://github.com/granek/microbiome_workshop][GitHub Repository]]
+   - [[https://hub.docker.com/r/granek/jupyter-microbiome/][Docker Image]]
+** Microbiome Resources
+   - [[http://benjjneb.github.io/dada2/index.html][Dada]]
+     - [[http://dx.doi.org/10.1101/024034][DADA2 preprint]]
+     - [[https://github.com/benjjneb/dada2][Dada2 Github Repository]]
+   - [[http://joey711.github.io/phyloseq/][Phyloseq]]
+     - [[http://dx.doi.org/10.1371/journal.pcbi.1003531][Waste Not, Want Not: Why Rarefying Microbiome Data Is Inadmissible]]
+     - [[http://dx.doi.org/10.1371/journal.pone.0061217][phyloseq: An R Package for Reproducible Interactive Analysis and Graphics of Microbiome Census Data]]
+   - [[http://qiime.org/][Qiime]]
+   - [[http://www.mothur.org/][Mothur]]
+   - [[http://www.earthmicrobiome.org/emp-standard-protocols/][Earth Microbiome Project Protocols]]
+** General Computational Resources
+   - [[https://azure.microsoft.com/en-us/][Azure]]
+     - [[https://azure.microsoft.com/en-us/community/education/][Azure in education]]
+     - [[http://research.microsoft.com/en-us/projects/azure/default.aspx][Azure for Research]]
+   - [[https://www.docker.com/][Docker]]
+     - [[https://docs.docker.com/machine/][Docker Machine]]
+   - [[http://jupyter.org/][Jupyter]]
+     - [[https://github.com/jupyter/docker-stacks][Jupyter Docker Stacks]]
+   - [[https://www.rstudio.com/][RStudio]]
+** Reproducible Research
+   - [[http://www.ncbi.nlm.nih.gov/sra/][SRA]]
+   - [[http://dx.doi.org/10.1371/journal.pcbi.1003285][Ten Simple Rules for Reproducible Computational Research]]
+   - [[http://civilstat.com/2014/02/reproducible-research-training-wheels-and-knitr/][Reproducible research, training wheels, and knitr]]
+
+
