download_through_jupyter.ipynb: Added information about GitHub repo

--- a/workshop_nb/download_through_jupyter.ipynb
+++ b/workshop_nb/download_through_jupyter.ipynb
@@ -63,9 +63,14 @@
    "metadata": {},
    "source": [
     "## Other Download Options\n",
-    "Another way to download files is through scp and sftp, these are secure file transfer protocols.  Command line versions come built in on OS X, as long as you don't mind using the.  There are also GUI versions of scp and sftp, such as [Cyberduck](https://cyberduck.io/) and [Filezilla](https://filezilla-project.org/).  These are both cross platform and free.  For these you would use the same hostname, username, and password that you used to SSH to your virtual machine.\n",
+    "### sftp and scp\n",
+    "Another way to download files from the virtual machine is through scp and sftp, these are secure file transfer protocols.  Command line versions come built in on OS X, as long as you don't mind using the.  There are also GUI versions of scp and sftp, such as [Cyberduck](https://cyberduck.io/) and [Filezilla](https://filezilla-project.org/).  These are both cross platform and free.  For these you would use the same hostname, username, and password that you used to SSH to your virtual machine.\n",
     "\n",
-    "I am partial to [rsync](https://en.wikipedia.org/wiki/Rsync).  It is less user friendly, but has powerfully features, such as the ability to transfer only files that are different between two computers, and the ability to resume a transfer that failed part way."
+    "### rsync\n",
+    "I am partial to [rsync](https://en.wikipedia.org/wiki/Rsync).  It is less user friendly, but has powerfully features, such as the ability to transfer only files that are different between two computers, and the ability to resume a transfer that failed part way.\n",
+    "\n",
+    "### GitHub Repository\n",
+    "All of the above methods will download files from your virtual machine as they are now (i.e. with any changes you have made).  If you want the orginial notebooks, as well as additional material that went into developing this workshop, you can [download a zip file](https://github.com/granek/microbiome_workshop/archive/master.zip) containing the whole [GitHub Repository of this workshop](https://github.com/granek/microbiome_workshop)"
    ]
   }
  ],
