workshop_overview.ipynb: Added links for bash tutorial and resources list

--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -8,7 +8,7 @@
     "1. [Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
     "1. [R](swc_r_docs/r_tutorial.ipynb)\n",
     "1. [Dada](dada_docs/dada_tutorial.ipynb)\n",
-    "1. Bash/Unix\n",
+    "1. [Bash](workshop_nb/bash_tutorial.ipynb)\n",
     "1. Qiime\n",
     "1. Phyloseq\n",
     "1. Reproducible Research"
@@ -21,7 +21,7 @@
     "## Miscellaneous\n",
     "* [Download from VM](workshop_nb/download_through_jupyter.ipynb)\n",
     "* [Update Notebooks](workshop_nb/update_notebooks.ipynb)\n",
-    "* Virtual Machines and Docker"
+    "* [Resources](https://github.com/granek/microbiome_workshop#resources)"
    ]
   }
  ],
