Moved current workshop notebooks into workshop_nb directory

--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "## Workshop Sections\n",
     "1. [Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
-    "1. [R](swc_r_docs/r_tutorial.ipynb)\n",
-    "1. [Dada](dada_docs/dada_tutorial.ipynb)\n",
+    "1. [R](workshop_nb/r_tutorial.ipynb)\n",
+    "1. [Dada](workshop_nb/dada_tutorial.ipynb)\n",
     "1. [Bash](workshop_nb/bash_tutorial.ipynb)\n",
     "1. Qiime\n",
     "1. Phyloseq\n",
