make_clean_notebooks.ipynb: Now outputting to "clean" directory.  Cleanup up cruft and output.

--- a/prep_nb/make_clean_notebooks.ipynb
+++ b/prep_nb/make_clean_notebooks.ipynb
@@ -1,73 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jovyan/work/workshop_nb/download_through_jupyter.ipynb\r\n",
-      "/home/jovyan/work/workshop_nb/update_notebooks.ipynb\r\n",
-      "/home/jovyan/work/workshop_nb/jupyter_tutorial_clean.ipynb\r\n",
-      "/home/jovyan/work/workshop_nb/bash_tutorial.ipynb\r\n",
-      "/home/jovyan/work/workshop_nb/jupyter_tutorial.ipynb\r\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "find ~/work/workshop_nb -name \"*.ipynb\" | grep -v \".ipynb_checkpoints\" | xargs -n1 echo"
+    "Strip code cells from workshop notebooks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 2.7.9\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "python2 -V"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "usage: strip_code_blocks.py [-h] [-o OUTFILE] JUPYTER_NOTEBOOK\r\n",
-      "\r\n",
-      "Strip code blocks from a Jupyter notebook\r\n",
-      "\r\n",
-      "positional arguments:\r\n",
-      "  JUPYTER_NOTEBOOK\r\n",
-      "\r\n",
-      "optional arguments:\r\n",
-      "  -h, --help            show this help message and exit\r\n",
-      "  -o OUTFILE, --output OUTFILE\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "python2 ~/work/prep_nb/strip_code_blocks.py -h"
+    "mkdir -p ~/work/workshop_clean_nb\n",
+    "find ~/work/workshop_nb -name \"*.ipynb\" | \\\n",
+    "    grep -v \".ipynb_checkpoints\" | \\\n",
+    "    xargs -n1 python2 ~/work/prep_nb/strip_code_blocks.py -d ~/work/workshop_clean_nb"
    ]
   }
  ],
