--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "## Workshop Sections\n",
-    "1. [Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
-    "1. [R](workshop_nb/r_tutorial.ipynb)\n",
-    "1. [Dada](workshop_nb/dada_tutorial.ipynb)\n",
-    "1. [Bash](workshop_nb/bash_tutorial.ipynb)\n",
+    "1. [Jupyter](workshop_nb/jupyter_tutorial.ipynb) ([clean](workshop_clean_nb/jupyter_tutorial_clean.ipynb))\n",
+    "1. [R](workshop_nb/r_tutorial.ipynb) ([clean](workshop_clean_nb/r_tutorial_clean.ipynb))\n",
+    "1. [Dada](workshop_nb/dada_tutorial.ipynb) ([clean](workshop_clean_nb/dada_tutorial_clean.ipynb))\n",
+    "1. [Bash](workshop_nb/bash_tutorial.ipynb) ([clean](workshop_clean_nb/bash_tutorial_clean.ipynb))\n",
     "1. Qiime\n",
     "1. Phyloseq\n",
     "1. Reproducible Research"
