--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -9,8 +9,8 @@
     "1. [R](workshop_nb/r_tutorial.ipynb) ([clean](workshop_clean_nb/r_tutorial_clean.ipynb))\n",
     "1. [Dada](workshop_nb/dada_tutorial.ipynb) ([clean](workshop_clean_nb/dada_tutorial_clean.ipynb))\n",
     "1. [Bash](workshop_nb/bash_tutorial.ipynb) ([clean](workshop_clean_nb/bash_tutorial_clean.ipynb))\n",
-    "1. Qiime\n",
-    "1. Phyloseq\n",
+    "1. [Qiime](workshop_nb/illumina_overview_tutorial.ipynb) ([clean](workshop_clean_nb/illumina_overview_tutorial_clean.ipynb))\n",
+    "1. [Phyloseq Import](workshop_nb/phyloseq_import_data.ipynb) ([clean](workshop_clean_nb/phyloseq_import_data_clean.ipynb))\n",
     "1. Reproducible Research"
    ]
   },
