dada_tutorial.ipynb: Rearranged some code blocks so they don't run outside page margins

--- a/workshop_nb/dada_tutorial.ipynb
+++ b/workshop_nb/dada_tutorial.ipynb
@@ -208,8 +208,10 @@
     "filtRs <- paste0(path, sample.names, \"_R_filt.fastq.gz\")\n",
     "# Filter\n",
     "for(i in seq_along(fnFs)) {\n",
-    "  fastqPairedFilter(c(fnFs[i], fnRs[i]), c(filtFs[i], filtRs[i]),\n",
-    "                    trimLeft=c(10, 10), truncLen=c(240,160),\n",
+    "  fastqPairedFilter(c(fnFs[i], fnRs[i]), \n",
+    "                    c(filtFs[i], filtRs[i]),\n",
+    "                    trimLeft=c(10, 10), \n",
+    "                    truncLen=c(240,160),\n",
     "                    maxN=0, maxEE=2, truncQ=2,\n",
     "                    compress=TRUE, verbose=TRUE)\n",
     "}"
@@ -298,8 +300,10 @@
    },
    "outputs": [],
    "source": [
-    "dadaFs <- dada(derepFs, err=inflateErr(tperr1,3), selfConsist = TRUE,multithread=TRUE)\n",
-    "dadaRs <- dada(derepRs, err=inflateErr(tperr1,3), selfConsist = TRUE,multithread=TRUE)"
+    "dadaFs <- dada(derepFs, err=inflateErr(tperr1,3), \n",
+    "               selfConsist = TRUE, multithread=TRUE)\n",
+    "dadaRs <- dada(derepRs, err=inflateErr(tperr1,3), \n",
+    "               selfConsist = TRUE, multithread=TRUE)"
    ]
   },
   {
@@ -372,7 +376,9 @@
    },
    "outputs": [],
    "source": [
-    "mergers <- mergePairs(dadaFs, derepFs, dadaRs, derepRs, verbose=TRUE)\n",
+    "mergers <- mergePairs(dadaFs, derepFs, \n",
+    "                      dadaRs, derepRs, \n",
+    "                      verbose=TRUE)\n",
     "# Inspect the merger data.frame from the first sample\n",
     "head(mergers[[1]])"
    ]
@@ -467,8 +473,10 @@
    },
    "outputs": [],
    "source": [
-    "taxa <- assignTaxonomy(seqtab.nochim, paste0(path, \"rdp_train_set_14.fa.gz\"))\n",
-    "colnames(taxa) <- c(\"Kingdom\", \"Phylum\", \"Class\", \"Order\", \"Family\", \"Genus\")\n",
+    "taxa <- assignTaxonomy(seqtab.nochim, \n",
+    "                       paste0(path, \"rdp_train_set_14.fa.gz\"))\n",
+    "colnames(taxa) <- c(\"Kingdom\", \"Phylum\", \"Class\", \n",
+    "                    \"Order\", \"Family\", \"Genus\")\n",
     "unname(head(taxa))"
    ]
   },
@@ -496,12 +504,16 @@
    },
    "outputs": [],
    "source": [
-    "unqs.mock <- getUniques(removeBimeraDenovo(mergers[[\"Mock\"]], verbose=TRUE))\n",
-    "cat(\"DADA2 inferred\", length(unqs.mock), \"sample sequences present in the Mock community.\\n\")\n",
+    "unqs.mock <- getUniques(removeBimeraDenovo(mergers[[\"Mock\"]], \n",
+    "                                           verbose=TRUE))\n",
+    "cat(\"DADA2 inferred\", length(unqs.mock), \n",
+    "    \"sample sequences present in the Mock community.\\n\")\n",
     "\n",
     "mockRef <- readFasta(paste0(path, \"HMP_MOCK.v35.fasta\"))\n",
-    "match.ref <- sum(sapply(names(unqs.mock), function(x) any(grepl(x, as.character(sread(mockRef))))))\n",
-    "cat(\"Of those,\", sum(match.ref), \"were exact matches to the expected reference sequences.\\n\")"
+    "match.ref <- sum(sapply(names(unqs.mock), \n",
+    "                        function(x) any(grepl(x, as.character(sread(mockRef))))))\n",
+    "cat(\"Of those,\", sum(match.ref), \n",
+    "    \"were exact matches to the expected reference sequences.\\n\")"
    ]
   },
   {
@@ -573,7 +585,9 @@
    },
    "outputs": [],
    "source": [
-    "plot_richness(ps, x=\"Day\", measures=c(\"Shannon\", \"Simpson\"), color=\"When\") + theme_bw()"
+    "plot_richness(ps, x=\"Day\", \n",
+    "              measures=c(\"Shannon\", \"Simpson\"), \n",
+    "              color=\"When\") + theme_bw()"
    ]
   },
   {
@@ -596,8 +610,10 @@
    },
    "outputs": [],
    "source": [
-    "ord.nmds.bray <- ordinate(ps, method=\"NMDS\", distance=\"bray\")\n",
-    "plot_ordination(ps, ord.nmds.bray, color=\"When\", title=\"Bray NMDS\")"
+    "ord.nmds.bray <- ordinate(ps, method=\"NMDS\", \n",
+    "                          distance=\"bray\")\n",
+    "plot_ordination(ps, ord.nmds.bray, \n",
+    "                color=\"When\", title=\"Bray NMDS\")"
    ]
   },
   {
