dada_tutorial.ipynb: Editted text.

--- a/workshop_nb/dada_tutorial.ipynb
+++ b/workshop_nb/dada_tutorial.ipynb
@@ -458,9 +458,10 @@
     "\n",
     "Appropriately formatted training fastas for the RDP training set 14, the GreenGenes 13.8 release clustered at 97% identity, and the Silva reference database are [available for download here](https://www.dropbox.com/sh/mfcivbudmc21cqt/AAB1l-AUM5uKvjrR33ct-cTXa?dl=0). Download the rdp\\_train\\_set\\_14.fa.gz file, and place it in the directory with the fastq files.\n",
     "\n",
-    "> Before we can run the assignment, we need to [run this notebook]>(download_taxonomy.ipynb) to download the taxonomy data.\n",
+    "> ## Download 16s rRNA Reference\n",
+    "> Before we can run the assignment, we need to [run this notebook](download_taxonomy.ipynb) to download the taxonomy data.\n",
     "\n",
-    "**Assign taxonomy:**"
+    "## Assign taxonomy"
    ]
   },
   {
