phyloseq-demo.ipynb: A few initial edits

--- a/phyloseq_docs/phyloseq-demo.ipynb
+++ b/phyloseq_docs/phyloseq-demo.ipynb
@@ -4,9 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`r opts_chunk$set(cache=FALSE, fig.width=10)`\n",
-    "<link href=\"http://joey711.github.com/phyloseq/markdown.css\" rel=\"stylesheet\"></link>\n",
-    "\n",
     "Demo: phyloseq – An R package for microbiome census data\n",
     "========================================================\n",
     "\n",
@@ -45,7 +42,7 @@
    "metadata": {
     "Rmd_chunk_options": "loadpkg, warning=FALSE, message=FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -147,7 +144,7 @@
    "metadata": {
     "Rmd_chunk_options": "import-qiime-ex",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -338,7 +335,7 @@
    "metadata": {
     "Rmd_chunk_options": "BushmanLocal",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -449,7 +446,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1962,7 +1959,8 @@
    "file_extension": ".r",
    "mimetype": "text/x-r-source",
    "name": "R",
-   "pygments_lexer": "r"
+   "pygments_lexer": "r",
+   "version": "3.2.2"
   }
  },
  "nbformat": 4,
